# ROSCon2023Demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  autoexec.cfg  project.json
Assets/Factory/: Box1.prefab  Box2.prefab  Box3.prefab  Box4.prefab  EuroPallet.prefab
Assets/Gripper/: Gripper.fbx
Assets/Importer/: ur10.prefab
Docker/: Dockerfile  Dockerfile.O3DE  Dockerfile.ROS  README.md  RosConDemoSeedList.seed  build_ros.sh  build_ros_ws.sh  build_simulation.sh  clone_simulation.sh  game.cfg  launch_ros.sh  launch_ros_fleet.sh  launch_simulation.sh  roscon2023.patch  roscon2023_large_cyclone_config.xml
Gem/: ROSCon2023Demo_files.cmake  enabled_gems.cmake
Gem/Source/: ROSCon2023DemoModule.cpp  ROSCon2023DemoSystemComponent.h
Levels/robotic_test/: robotic_test.prefab
Levels/single/: single.prefab
Levels/single2/: single2.prefab
Passes/: ContrastAdaptiveSharpening.pass  SMAAConfiguration.azasset  Taa.pass
Prefabs/: Cell.prefab
Project/: AdjustVisibility.scriptcanvas  CameraDropPickupDropPark.prefab  HumanGoAway.scriptcanvas  autoexec.cfg  empty_canvas.scriptcanvas  game.cfg  imgui.ini  project.json  view_disparity.py
Project/Assets/: Belt_material_Roscon2023.physxmaterial  NPC_Motion_Set.motionset  navigation_mesh.scriptcanvas  pathFollow.lua  scripts.lua
Project/Gem/: CMakeLists.txt  ROSCon2023Demo_files.cmake  enabled_gems.cmake  gem.json  (+1 more)
ros2_ws/: .gitignore  0001-changed-dirSuffix-to-FixedString.patch  README.md  log.txt  setup_submodules.bash
ros2_ws/src/OTTO1500_Description/: CMakeLists.txt  package.xml
ros2_ws/src/OTTO1500_Description/meshes/: Platform_B.stl  lift.stl  lift_upper.stl
ros2_ws/src/OTTO1500_Description/urdf/: OTTO1500.urdf.xacro  OTTO1500_basic_platform.urdf.xacro
ros2_ws/src/blind_path_follower/: CMakeLists.txt  package.xml
ros2_ws/src/blind_path_follower/launch/: blind_path_follower.launch.py
ros2_ws/src/blind_path_follower/src/: follow_path.cpp
ros2_ws/src/demo_orchestration/: CMakeLists.txt  package.xml
ros2_ws/src/demo_orchestration/include/demo_orchestration/: mtc_action_client.h
ros2_ws/src/demo_orchestration/launch/: orchestration.launch.py
ros2_ws/src/demo_orchestration/scripts/: follow_path_test.py
ros2_ws/src/demo_orchestration/src/: demo_orchestration.cpp  follow_path.cpp
ros2_ws/src/global_path_lock/: CMakeLists.txt  package.xml
ros2_ws/src/global_path_lock/config/: paths.yaml
ros2_ws/src/global_path_lock/launch/: global_path_lock.launch.py
ros2_ws/src/global_path_lock/src/: global_path_lock.cpp
ros2_ws/src/o3de_fleet_nav/: NOTICE  package.xml  setup.cfg  setup.py
ros2_ws/src/o3de_fleet_nav/behaviour_trees/: navigate_through_poses_w_replanning_and_recovery.xml
ros2_ws/src/o3de_fleet_nav/config/: fleet_config.yaml
ros2_ws/src/o3de_fleet_nav/launch/: o3de_bringup_launch.py  o3de_fleet_nav_launch.py  o3de_localization_launch.py  o3de_nav_launch.py  o3de_navigation_launch.py  o3de_rviz_launch.py  waypoint.launch.py
ros2_ws/src/o3de_fleet_nav/maps/: map_demolevel1.pgm  map_demolevel1.yaml  map_warehouse.pgm  video_level.yaml  video_level_mask.pgm
ros2_ws/src/o3de_fleet_nav/o3de_fleet_nav/: follow_waypoints.py
ros2_ws/src/o3de_fleet_nav/params/: bt.xml  navigate_through_poses_w_replanning_and_recovery.xml
ros2_ws/src/o3de_fleet_nav/params/humble/: nav2_multirobot_params.yaml  nav2_slam.yaml  otto600Params.yaml
ros2_ws/src/o3de_fleet_nav/params/iron/: nav2_slam.yaml
ros2_ws/src/otto_deliberation/: CMakeLists.txt  package.xml
ros2_ws/src/otto_deliberation/config/: otto1500_tasks.yaml  otto600_npc_stereo_task.yaml  otto600_tasks.yaml  otto600_tasks_12.yaml  otto600_tasks_12_lane2.yaml  otto600_tasks_12_lane3.yaml  otto600_tasks_34.yaml  otto600_tasks_34_lane2.yaml  otto600_tasks_34_lane3.yaml  otto600_tasks_left.yaml  otto600_tasks_right.yaml  simple_test.yaml
ros2_ws/src/otto_deliberation/include/otto_deliberation/: nav2_action_client.h  otto_autonomy.h  robot_status.h  tasks.h
ros2_ws/src/otto_deliberation/launch/: otto600_deliberation.launch.py  otto600_deliberation_test.launch.py  otto_deliberation.launch.py
ros2_ws/src/otto_deliberation/src/: deliberation_otto_node.cpp  nav2_action_client.cpp  otto_autonomy.cpp  robot_status.cpp  tasks.cpp
ros2_ws/src/roscon2023_demo/: CMakeLists.txt  package.xml
ros2_ws/src/roscon2023_demo/bash/: _navigate_deliberation.sh  navigate_deliberation.sh  spawn.sh  start_fleet.sh  stop_fleet.sh
ros2_ws/src/roscon2023_demo/config/: ROSCon2023Config.yaml  ROSCon2023Config_2.yaml  ROSCon2023Config_4.yaml  ROSCon2023Config_8.yaml  ROSCon2023Config_900.yaml  ROSCon2023Config_900_group1.yaml  ROSCon2023Config_900_group2.yaml  ROSCon2023Config_900_group3.yaml  ROSCon2023Config_stereoNPCS.yaml  ROSCon2023Config_urs.yaml
ros2_ws/src/roscon2023_demo/launch/: ROSCon2023Demo.launch.py  ROSCon2023DemoUR.launch.py  spawnRobots.launch.py
ros2_ws/src/roscon2023_demo/scripts/: status.py
ros2_ws/src/ur_moveit_demo/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ur_moveit_demo/launch/: moveit.launch.py  mtc.launch.py  my_demo.launch.py  palletization_demo.launch.py  rviz.launch.py
ros2_ws/src/ur_moveit_demo/rviz/: collision_objects.rviz  view_robot_moveit.rviz  view_robot_moveit2.rviz  view_robot_moveit_ur1.rviz
ros2_ws/src/ur_moveit_demo/src/: ak_demo.cpp  constants.h  gripper.h  mtc.cpp  mtc2.cpp  taskConstructor.cpp  taskConstructor.h  ur_moveit_demo.cpp  ur_moveit_simple.cpp  ur_moveit_wait.cpp  utils.cpp  utils.h  vision.cpp  vision.h
ros2_ws/src/ur_moveit_demo_msg/: CMakeLists.txt  package.xml
ros2_ws/src/ur_moveit_demo_msg/action/: Mtc.action
ros2_ws/src/ur_palletization/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ur_palletization/config/: sensors_3d.yaml
ros2_ws/src/ur_palletization/launch/: ur_palletization.launch.py
ros2_ws/src/ur_palletization/rviz/: view_robot.rviz  view_robot_moveit_ur2.rviz
ros2_ws/src/ur_palletization/src/: constants.h  gripper.cpp  gripper.h  palletizationNode.cpp  palletizationNode.h  taskConstructor.cpp  taskConstructor.h  utils.cpp  utils.h  vision.cpp  vision.h
(+1235 files in other folders)
