<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blind_path_follower</name>
  <version>0.0.0</version>
  <description>Blind path follower action server</description>
  <maintainer email="michal.pelka@robotec.ai">artur</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav2_msgs</depend>  
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>blind_path_follower_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
