<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_path_lock</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="artur.kamieniecki@robotec.ai">artur</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>geometry_msgs</depend>
  <depend>lock_service_msgs</depend>
  <depend>lane_provider_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
