<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscon2023_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="artur.kamieniecki@robotec.ai">artur</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>otto_deliberation</depend>
  <depend>blind_path_follower</depend>
  <depend>o3de_fleet_nav</depend>
  <depend>demo_orchestrator</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
